# cura

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.json  settings.local.json
.github/workflows/: build.yml  test.yml
src/: App.tsx  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cura_state.rs  lib.rs  main.rs
src-tauri/src/commands/: cura_duplicates.rs  cura_organize.rs  cura_scan.rs  mod.rs
src-tauri/src/models/: cura_media_file.rs  cura_progress.rs  duplicates.rs  mod.rs  organize.rs
src-tauri/src/scanner/: exif_extractor.rs  file_scanner.rs  hasher.rs  mod.rs  perceptual_hash.rs
src/components/duplicates/: CuraDuplicatesPanel.tsx
src/components/grid/: CuraMediaGrid.tsx  index.ts
src/components/layout/: CuraHeader.tsx  CuraMainLayout.tsx  CuraSidebar.tsx
src/components/organize/: CuraOrganizePanel.tsx
src/components/progress/: CuraScanProgress.tsx  index.ts
src/components/scan/: CuraScanPanel.tsx  index.ts
src/components/sources/: CuraSourceSelector.tsx  index.ts
src/core/: cura_clusterer.cpp  cura_clusterer.hpp  cura_fileops.cpp  cura_fileops.hpp  cura_hasher.cpp  cura_hasher.hpp  cura_image.cpp  cura_image.hpp  cura_scanner.cpp  cura_scanner.hpp
src/services/tauri/: curaDuplicatesApi.ts  curaOrganizeApi.ts  curaScanApi.ts  index.ts
src/stores/: curaMediaStore.ts  duplicatesStore.ts  index.ts  navigationStore.ts  organizeStore.ts
src/styles/: globals.css
src/threading/: cura_threadpool.cpp  cura_threadpool.hpp
src/types/: curaMediaFile.ts  curaProgress.ts  duplicates.ts  index.ts  organize.ts
src/ui/: cura_app.cpp  cura_app.hpp
tests/: CMakeLists.txt  test_clusterer.cpp  test_fileops.cpp  test_hasher.cpp  test_image.cpp  test_scanner.cpp
ui/: cura_main.slint
ui/components/: cura_folder_picker.slint  cura_group.slint  cura_organize.slint  cura_preview.slint  cura_progress.slint  cura_review.slint  cura_setup.slint  cura_thumbnail.slint  cura_toolbar.slint
ui/models/: cura_models.slint
ui/themes/: cura_animations.slint  cura_dark.slint  cura_theme.slint
